tests/miz/pass/parser/pass_parser_operator_terms_001.miz
import parser.type_fixtures;
reserve x for T of ~ f(a) ! ++ p.x ** b qua T;
reserve y for T of (a ++ b) !, a ++ (b ** c), a ** b ** c;
