tests/miz/fail/parser/fail_parser_qua_missing_type_001.miz
import parser.type_fixtures;
reserve x for T of x qua ;
